fix image issue to be able to deploy, also fix line-height too big and icons are too close to the edge of the button #6

--- a/src/_component/about/about-mobile.scss
+++ b/src/_component/about/about-mobile.scss
@@ -61,6 +61,9 @@
 .#{$class}-link-description{
   text-align: center;
   font-size: 1.5rem;
-  line-height: 2;
-  padding:0 1.4rem;
+  line-height: 1.5;
+  padding: 0 1.6rem;
+}
+.#{$class}-link-list span{
+  padding-right: 1rem;
 }
